// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds like views fetches liked by posts 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "likedBy": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "eve.test",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "dan.test",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "carol.test",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(3)",
      "displayName": "bobby",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "bob.test",
    },
  ],
  "uri": "record(0)",
}
`;

exports[`pds like views fetches liked by replies 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "likedBy": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "carol.test",
    },
  ],
  "uri": "record(0)",
}
`;
